assets/css/style.css
/* Fonts */
/* Catamaran for body */
/* Averia Sans Libre for headings */
@import url('https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Catamaran:wght@100..900&display=swap');

/* Overriding default styles */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project styles */
    color: #0e0e0e;
    font-family: 'Catamaran', sans-serif;
}

/* Header */
header {
    background-color: #016290;
    color: #f3f3f3;
    position: fixed;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    padding: 0 10px;
    height:52px;
}

#logo {
    padding: 0 0 0 30px;
    text-align: center;
    font-size: larger;
}

#logo-container {
    flex-grow:2;
    padding-top:14px;
}

h1 {
    font-family: 'Averia Sans Libre', sans-serif;
    font-style: italic;
    font-size: 100%;
    text-align: center;
}

header a {
    text-decoration: none;
    color: inherit;
}

header li {
    list-style-type: none;
    padding-bottom:2px;
}

.active {
    text-decoration: underline #f7d1d3 wavy 3px;
}

#menu {
    font-size: 80%;
}

#menu a:hover {
    color: #f7d1d3;
}

/* Navbar */

nav {
    position: absolute;
    background-color: #016290;
    width: 100%;
    left:0;
    text-align: center;
    display: none;
    top:100%;
    padding-bottom:10px;
}

#nav-toggle:checked~nav {
    display:block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    flex-basis: 30px;
    font-size: 2rem;
    text-align: center;
}

/* Main content */
main {
    background-color: #f3f3f3;
    flex: 1 0 auto;
    margin-top:52px;
}

#hero {
    background-color: #6ea4b6;
    width:100%;
    height: 400px;
    color: #0e0e0e;
    text-align: center;
    padding:40px 30px;
    display:flex;
    justify-content: center;
    align-items: center;
    box-shadow: 0 1px 1px #0e0e0e;
    margin-bottom: 20px;
}

#hero-text > h1 {
    font-size: 140%;
    padding-bottom:10px;
}

#hero-text > p {
    font-size:90%;
}

#info {
    font-size: 80%;
    text-align: center;
    padding: 5px 10px;
}

.info-div {
    padding:20px 20px;
}

#info img {
    width:150px;
    height:150px;
    object-fit: cover;
    border-radius: 50%;
    margin-bottom:10px;
}

#info h2 {
    margin-top: 10px;
    font-style:italic;
    background-color: #f7d1d3;
    display:inline;
}

#info p {
    padding:10px 0;
}

/* Practices page */
/* Intro */
#practices-intro {
    padding:20px;
    text-align:center;
}

#practices-intro h1 {
    background-color: #f7d1d3;
    font-style:italic;
    display:inline;
    padding: 2px 3px;
    font-size:130%;
}

#practices-intro p {
    padding-top:10px;
    line-height: 110%;
    font-size:90%;
}

/* Techniques */
#techniques {
    margin: 10px 20px 20px 20px;
    font-size: 80%;
}

.technique h2 {
    font-style: italic;
} 

.technique-progress {
    margin:0 5%;
}

.technique {
    margin-bottom: 30px;
    border: 1px solid #016290;
    border-radius: 10px;
    height:300px;
    width:100%;
    display: flex; /* Add this line */
    align-items: center; /* Add this line */
    justify-content: center;
}

.technique li {
    list-style-position: inside;
}

.inner-technique {
    margin:20px;
    background-color: rgba(110, 164, 182,.8);
    color:black;
    font-weight: 500;
    padding-left:10px;
    padding: 5%;
}

#breathing {
    background-image: url('../images/mindful-breathing.jpg');
    background-size:cover;
}

#senses {
    background-image: url('../images/five-senses.jpg');
    background-size:cover;
}

#scan {
    background-image: url('../images/body-scan.jpg');
    background-size:cover;
}

#eating {
    background-image: url('../images/mindful-eating.jpg');
    background-size:cover;
}

.progress-bar {
    text-align: center;
    display: flex;
}

.dot-empty {
    height: 25px;
    width: 25px;
    border: 2px solid #f7d1d3;
    border-radius: 50%;
}

.dot-full {
    height: 25px;
    width: 25px;
    background-color: #f7d1d3;
    border-radius: 50%;
}


/* Footer */
#social-networks {
    background-color: #016290;
    text-align:center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-networks i {
    color:#f3f3f3;
    font-size: 150%;
}

#social-networks i:hover {
    color:#f7d1d3;
}

/* Media query: tablets and larger (768px and up) */
@media screen and (min-width:768px){
    /* Header */    
    header {
        height:60px;
    }
    
    nav {
        display: block;
        position: relative;
        width: fit-content;
        padding-right: 10px;
        top:0;
    }

    #logo {
        font-size:x-large;
        padding: 0 0 0 204.8px;
    }

    #menu {
        display: flex;
        font-size: 90%;
    }

    #menu > li {
        padding-left: 10px;
    }

    .nav-toggle-label {
        display: none;
    }

    /* Main content */
    main {
        margin-top:60px;
    }

    #hero {
        height:400px;
        padding:40px 130px;
    }

    #hero-text p {
       padding-top: 30px; 
    }

    .info-div {
        display:flex;
        justify-content: space-around;
        align-items: center;
        padding:0px 30px;
    }

    .info-text {
        flex-basis: 50%;
        padding:0px 2%;
    }
    

    #info img {
        width:270px;
        height:270px;
    }

    #info div {
        padding-top:20px;
    }

    #info p {
        padding-top:20px;
    }

    .who {
        margin-bottom: 30px;
    }

    .left {
        order:-1;
    }

    /* Practices page */
    #practices-intro {
        padding: 20px 20%;
    }

    .technique {
        max-width:60%;
    }
    
    .inner-technique {
        margin:30px 60px;
    }

    .progress-bar {
        text-align:left;
    }

    #senses, #bar2 {
        margin-left:13.3%;
    }

    #scan, #bar3 {
        margin-left:26.6%;
    }

    #eating, #bar4 {
        margin-left:40%;
    }

}

/* Media query: laptops and larger */
@media screen and (min-width:1024px) {
    #info {
        display:flex;
    }

    .info-div {
        display:block;
    }

    #info img {
        margin-top:30px;
    }

    .info-text {
        min-height: 251px;
    }

    /* Practices page */

    #breathing, #bar1, #senses, #bar2, #scan, #bar3, #eating, #bar4 {
        margin:0;
    }

    #techniques {
        display:flex;
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
    }

    .technique-progress {
        flex-basis:50%;
        display:flex;
        justify-content: center;
        align-items: center;
        padding:0;
        margin-bottom:20px;
    }

    .technique {
        width:80%;
        height:300px;
        max-width: fit-content;
    }

    #bar2, #bar4 {
        order:1;
    }

    .progress-bar {
        display: block;
        width:10%;
        height:300px;
        padding-top:30px;
    }

    .dot-empty, .dot-full {
        display: block;
        width: 50px;
        height:50px;
        margin:10px 0px;
    }

    #breathing, #scan {
        padding-right:100px;
    }

    #senses, #eating {
        padding-left:100px;
    }


}

